--- a/backend.conf
+++ b/backend.conf
@@ -1,3 +1,4 @@
+# provide the resource group name, storage account name, container and key = filename to generate the state file.
 resource_group_name = "resource group name"
 storage_account_name = "storage account name"
 container_name = "terraform"
